[package]
name                   = "st"
version                = "0.0.1"
edition                = "2018"

authors                = ["Dmitry Ponyatov <dponyatov@gmail.com>"]
description            = "Smalltalk-like guest OS"

[dependencies]
tracing                = "0.1"
tracing-subscriber     = "0.2"

[target.'cfg(unix)'.dependencies]
libc                   = "0.2"
nix                    = "0.22"

[target.'cfg(windows)'.dependencies]
windows                = "0.19"
